--- a/content/talk/IWSM2018.md
+++ b/content/talk/IWSM2018.md
@@ -33,8 +33,8 @@ projects = []
 tags = []
 
 # Links (optional).
-url_pdf = "pdf/IWSM65_paper.pdf"
-url_slides = "pdf/IWSM2018.pdf"
+url_pdf = "pdf/IWSM2018.pdf"
+url_slides = ""
 url_video = ""
 url_code = ""
 
